--- a/ansible/playbooks/provision/roles/aervits.kerberos-server/templates/krb5.conf
+++ b/ansible/playbooks/provision/roles/aervits.kerberos-server/templates/krb5.conf
@@ -22,5 +22,5 @@ includedir /etc/krb5.conf.d/
  }
 
 [domain_realm]
- ".{{ realm|lower }} = {{ realm }}
+ .{{ realm|lower }} = {{ realm }}
  {{ realm|lower }} = {{ realm }}
