updated to hbase-alpha4

--- a/ansible/playbooks/provision/roles/aervits.hbase/defaults/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hbase/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 # defaults file for aervits.hbase
-   hbase_version: "hbase-2.0.0-alpha2"
-   hbase_url: http://apache.mirrors.pair.com/hbase/2.0.0-alpha-2/hbase-2.0.0-alpha2-bin.tar.gz
-   hbase_md5_sum: 2F6E58C837D35199FC8FDCC2D86322D5
+  hbase_version: "hbase-2.0.0-alpha4"
+  hbase_url: https://dist.apache.org/repos/dist/dev/hbase/hbase-2.0.0-alpha4RC0/hbase-2.0.0-alpha4-bin.tar.gz
+  hbase_md5_sum: 5E117E07294C70B39A7AFF4BBCFC2EE0
