--- a/ansible/playbooks/Vagrantfile
+++ b/ansible/playbooks/Vagrantfile
@@ -72,5 +72,6 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "ansible" do |ansible|
      ansible.playbook = "provision/oozie-playbook.yml"
+     ansible.verbose = "vvv"
   end 
 end
