--- a/ansible/playbooks/Vagrantfile
+++ b/ansible/playbooks/Vagrantfile
@@ -72,6 +72,8 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "ansible" do |ansible|
      ansible.playbook = "provision/oozie-playbook.yml"
-     ansible.verbose = "vvv"
+
+    # enable for debugging
+    # ansible.verbose = "vvv"
   end 
 end
