--- a/ansible/playbooks/provision/roles/aervits.hbase/defaults/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hbase/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 # defaults file for aervits.hbase
   hbase_version: "hbase-2.0.0-alpha4"
-  hbase_url: https://dist.apache.org/repos/dist/dev/hbase/hbase-2.0.0-alpha4RC0/hbase-2.0.0-alpha4-bin.tar.gz
+  hbase_url: http://mirror.stjschools.org/public/apache/hbase/2.0.0-alpha4/hbase-2.0.0-alpha4-bin.tar.gz
   hbase_md5_sum: 5E117E07294C70B39A7AFF4BBCFC2EE0
