--- a/ansible/playbooks/provision/roles/aervits.oozie/defaults/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.oozie/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
 # defaults file for aervits.oozie
-  oozie_version: "master"
-  hadoop_version: 2.7.4
+  oozie_version: "branch-5.0.0-beta1"
+  hadoop_version: 2.7.5
