--- a/ansible/playbooks/provision/hadoop-playbook.yml
+++ b/ansible/playbooks/provision/hadoop-playbook.yml
@@ -4,6 +4,7 @@
     - aervits.jdk
     - aervits.ssh
     - aervits.users
+    - aervits.hosts
     - aervits.hadoop
   remote_user: vagrant
   become: true
