--- a/ansible/playbooks/provision/roles/aervits.hosts/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.hosts/tasks/main.yml
@@ -7,12 +7,24 @@
     hostname:
       name: "{{ ansible_nodename }}"
 
+#  - name: update the ipv4 part of hosts file
+#    lineinfile:
+#      dest: "{{ hostname_hosts_file_location }}"
+##      regexp: "^127.0.0.1"
+#      regexp: "^::1"
+#      line: "{{hostvars[inventory_hostname]['ansible_default_ipv4']['address']}}{{ '   ' }}{{ ansible_fqdn }}{{ '   '}}{{ ansible_nodename }}"
+#      state: present
+#      insertafter: EOF
+#      backup: yes
+
   - name: update the ipv4 part of hosts file
     lineinfile:
-      dest: "{{ hostname_hosts_file_location }}"
-#      regexp: "^127.0.0.1"
-      regexp: "^::1"
+      path: "{{ hostname_hosts_file_location }}"
+      regexp: '^127\.0\.0\.1'
       line: "{{hostvars[inventory_hostname]['ansible_default_ipv4']['address']}}{{ '   ' }}{{ ansible_fqdn }}{{ '   '}}{{ ansible_nodename }}"
       state: present
       insertafter: EOF
       backup: yes
+      owner: root
+      group: root
+      mode: 0644
