oozie next steps

--- a/ansible/playbooks/provision/roles/aervits.oozie/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.oozie/tasks/main.yml
@@ -98,9 +98,112 @@
       - "hadoop-mapreduce-client-core-{{ hadoop_version }}.jar"
       - "hadoop-mapreduce-client-jobclient-{{ hadoop_version }}.jar"
       - "hadoop-mapreduce-client-shuffle-{{ hadoop_version }}.jar"
+      - oozie-client-5.0.0-beta1.jar
+      - oozie-core-5.0.0-beta1.jar
+      - xercesImpl-2.11.0.jar
+      - xml-apis-1.4.01.jar
+      - xml-apis-ext-1.3.04.jar
       - guava-11.0.2.jar
       - commons-collections-3.2.2.jar
       - commons-codec-1.4.jar
+      - commons-cli-1.2.jar
+      - commons-logging-1.1.jar
+      - derby-10.10.1.1.jar
+      - jcl-over-slf4j-1.7.25.jar
+      - jul-to-slf4j-1.7.25.jar
+      - org.eclipse.jdt.core-3.8.2.v20130121.jar
+      - mail-1.4.7.jar
+      - jetty-xml-9.2.19.v20160908.jar
+      - jetty-webapp-9.2.19.v20160908.jar
+      - jetty-util-9.2.19.v20160908.jar
+      - jetty-servlet-9.2.19.v20160908.jar
+      - jetty-server-9.2.19.v20160908.jar
+      - jetty-security-9.2.19.v20160908.jar
+      - jetty-rewrite-9.2.19.v20160908.jar
+      - jetty-plus-9.2.19.v20160908.jar
+      - jetty-jndi-9.2.19.v20160908.jar
+      - jetty-io-9.2.19.v20160908.jar
+      - jetty-http-9.2.19.v20160908.jar
+      - jetty-client-9.2.19.v20160908.jar
+      - jetty-annotations-9.2.19.v20160908.jar
+      - javax.servlet-api-3.1.0.jar
+      - commons-el-1.0.jar
+      - apache-log4j-extras-1.2.17.jar
+      - apache-jsp-9.2.19.v20160908.jar
+      - apache-jsp-8.0.33.jar
+      - apache-el-8.0.33.jar
+      - apacheds-kerberos-codec-2.0.0-M15.jar
+      - apacheds-i18n-2.0.0-M15.jar
+      - htrace-core-3.1.0-incubating.jar
+      - protobuf-java-2.5.0.jar
+      - asm-tree-5.0.1.jar
+      - jsr305-3.0.0.jar
+      - xmlgraphics-commons-2.2.jar
+      - stringtemplate-3.2.1.jar
+      - ST4-4.0.4.jar
+      - jersey-core-1.9.jar
+      - hive-shims-common-1.2.0.jar
+      - commons-dbcp-1.4.jar
+      - batik-anim-1.9.jar
+      - jdk.tools-1.8.jar
+      - joda-time-2.1.jar
+      - commons-net-3.1.jar
+      - c3p0-0.9.1.1.jar
+      - opencsv-2.3.jar
+      - hive-serde-1.2.0.jar
+      - jackson-jaxrs-1.8.3.jar
+      - hive-metastore-1.2.0.jar
+      - hive-hcatalog-core-1.2.0.jar
+      - xz-1.0.jar
+      - openjpa-jdbc-2.4.2.jar
+      - commons-exec-1.3.jar
+      - ivy-2.4.0.jar
+      - hive-shims-0.23-1.2.0.jar
+      - ant-1.9.1.jar
+      - xbean-asm5-shaded-3.17.jar
+      - snappy-java-1.0.4.1.jar
+      - servlet-api-2.5.jar
+      - openjpa-lib-2.4.2.jar
+      - jets3t-0.9.0.jar
+      - groovy-all-2.1.6.jar
+      - geronimo-j2ee-management_1.1_spec-1.0.1.jar
+      - jetty-schemas-3.1.M0.jar
+      - calcite-avatica-1.2.0-incubating.jar
+      - datanucleus-core-3.2.10.jar
+      - activemq-client-5.13.3.jar
+      - jaxb-impl-2.2.3-1.jar
+      - httpclient-4.3.6.jar
+      - calcite-linq4j-1.2.0-incubating.jar
+      - curator-framework-2.5.0.jar
+      - antlr-2.7.7.jar
+      - commons-math3-3.1.1.jar
+      - batik-css-1.9.jar
+      - velocity-1.5.jar
+      - jackson-mapper-asl-1.9.13.jar
+      - gmetric4j-1.0.7.jar
+      - paranamer-2.3.jar
+      - jersey-server-1.9.jar
+      - j2v8_macosx_x86_64-4.6.0.jar
+      - eigenbase-properties-1.1.5.jar
+      - batik-parser-1.9.jar
+      - jdom-1.1.jar
+      - commons-configuration-1.6.jar
+      - commons-digester-1.8.jar
+      - oozie-sharelib-hcatalog-5.0.0-beta1.jar
+      - geronimo-jta_1.1_spec-1.1.1.jar
+      - batik-script-1.9.jar
+      - asm-commons-5.0.1.jar
+      - netty-all-4.0.23.Final.jar
+      - curator-client-2.5.0.jar
+      - aggdesigner-algorithm-6.0.jar
+      - mockito-all-1.10.19.jar
+      - datanucleus-api-jdo-3.2.6.jar
+      - curator-x-discovery-2.5.0.jar
+      - slf4j-log4j12-1.6.6.jar
+      - slf4j-api-1.6.6.jar
+      - jul-to-slf4j-1.7.25.jar
+      - jcl-over-slf4j-1.7.25.jar
+      - log4j-1.2.17.jar
 
   - name: download extjs and place in libext
     get_url:
