--- a/ansible/playbooks/provision/roles/aervits.oozie/defaults/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.oozie/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 # defaults file for aervits.oozie
-  oozie_version: "5.0.0-beta1"
-  oozie_branch_version: "branch-{{ oozie_version }}"
+  oozie_version_short: "4.3"
+  oozie_version: "{{ oozie_version_short }}.1"
+  oozie_branch_version: "branch-{{ oozie_version_short }}"
   hadoop_version: 2.7.5
