--- a/ansible/playbooks/provision/roles/aervits.oozie/tasks/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.oozie/tasks/main.yml
@@ -42,11 +42,11 @@
       dest: "/opt/oozie/{{ oozie_version }}"
       remote_src: yes
       keep_newer: yes
-      creates: "/opt/oozie/{{ oozie_version }}/oozie-{{ oozie_version }}"
+      creates: "/opt/oozie/{{ oozie_version }}"
 
   - name: change oozie directory ownership
     file:
-      path: "/opt/oozie/{{ oozie_version }}/oozie-{{ oozie_version }}"
+      path: "/opt/oozie/{{ oozie_version }}"
       state: directory
       owner: oozie
       group: oozie
@@ -56,7 +56,7 @@
   - name: export OOZIE_HOME
     lineinfile:
       path: /etc/environment
-      line: export OOZIE_HOME="/opt/oozie/{{ oozie_version }}/oozie-{{ oozie_version }}"
+      line: export OOZIE_HOME="/opt/oozie/{{ oozie_version }}"
       state: present
       create: yes
 
@@ -75,6 +75,11 @@
       group: oozie
       mode: 0775
 
+  - name: download extjs and place in libext
+    get_url:
+      url: http://archive.cloudera.com/gplextras/misc/ext-2.2.zip
+      dest: $OOZIE_HOME/libext
+
   - name: get jars for libext
     command: "find /tmp/{{ oozie_branch_version }}/server/target/dependency -type f"
     register: libext_jars
@@ -90,14 +95,9 @@
     with_items:
       - "{{ libext_jars.stdout_lines }}"
 
-  - name: download extjs and place in libext
-    get_url:
-      url: http://archive.cloudera.com/gplextras/misc/ext-2.2.zip
-      dest: $OOZIE_HOME/libext
-
   - name: change oozie libext directory ownership
     file:
-      path: "/opt/oozie/{{ oozie_version }}/oozie-{{ oozie_version }}/libext"
+      path: "/opt/oozie/{{ oozie_version }}/libext"
       state: directory
       owner: oozie
       group: oozie
