--- a/ansible/playbooks/provision/roles/aervits.oozie/defaults/main.yml
+++ b/ansible/playbooks/provision/roles/aervits.oozie/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 # defaults file for aervits.oozie
+  oozie_rc_version: "oozie-4.3.1-rc3"
   oozie_version: "oozie-4.3.1"
-  oozie_tar_url: "http://people.apache.org/~satishsaley/{{ oozie_version }}-rc-2/{{ oozie_version}}.tar.gz"
-  oozie_md5_sum: 35acfc72e49fb080aaaa23d3b590918c
+  oozie_tar_url: "http://people.apache.org/~satishsaley/{{ oozie_rc_version }}/{{ oozie_version }}.tar.gz"
+  oozie_md5_sum: 35b0368c522de913ba0170facd68fcbe
